--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -2,12 +2,28 @@
 
 <html ng-app="blocChat">
 
-<head></head>
+<head lang="en">
+	<meta charset="UTF-8">
+	<title>bloc chat</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Space+Mono">
+	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+</head>
 
 <body>
+	<h1 class="name">bloc chat</h1>
 	
+	<span class="line"></span>
+	<span class="vert-line"></span>
 
-	
+	<table class="chat-room-list">
+		<tr>
+			<td class="add-chat-room">
+				<a class="add-chat-room-button"><span class="ion-plus"</a>
+			</td>
+			<td class="chat-room-name"></td>
+		</tr>
+	</table>
 	
 	
 	
