--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -8,27 +8,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Space+Mono">
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="/app/styles/main.css">
 </head>
 
 <body>
-	<h1 class="name">bloc chat</h1>
-	
-	<span class="line"></span>
-	<span class="vert-line"></span>
+	<div class="header">
+		<h1 class="name">bloc chat</h1>
+		<span class="block"></span>
+	</div>
+	<span class="side-bar"></span>
 
 	<table class="chat-room-list">
 		<tr>
 			<td class="add-chat-room">
-				<a class="add-chat-room-button"><span class="ion-plus"</a>
+				<a class="add-chat-room-button"><span class="ion-plus"></span></a>
 			</td>
-			<td class="chat-room-name"></td>
+			<td class="chat-room-name">room 1</td>
 		</tr>
 	</table>
 	
-	
-	
-	
-	
+	<span class="footer"></span>
 	
 	
 	<!--Angular-->
